# Multi-Agent-System

./: .dockerignore  .gitignore  Dockerfile  MANIFEST.in  QUICK_START.md  README.md  docker-compose.yml  pyproject.toml  requirements.txt
config/: models.yaml  policies.yaml  retrieval.yaml
data/: eval_test_cases.json  tech_manual.txt
prompts/: actor.yaml  critic.yaml  grounder.yaml  planner.yaml
scripts/: eval.py  run_api.py  run_system.py  test_imports.py
src/: __init__.py  config.py
src/agents/: __init__.py  actor.py  base.py  billing.py  billing_improved.py  critic.py  grounder.py  planner.py  router.py  technical.py
src/api/: __init__.py  server.py
src/common/: __init__.py  state.py
src/observability/: __init__.py  logger.py  tracing.py
src/orchestrator/: __init__.py  orchestrator.py
src/retrieval/: __init__.py  retriever.py
src/tools/: __init__.py  billing_tool.py  tool_registry.py
src/utils/: logging.py
tests/: conftest.py  test_billing.py  test_rag.py  test_routing.py
